--- a/main.css
+++ b/main.css
@@ -51,3 +51,13 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+.legend-box {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+.legend-text {
+    font-size: 14px;
+}
