--- a/main.css
+++ b/main.css
@@ -1,15 +1,16 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     font-family: 'poppins';
     /* display: flex; */
     justify-content: center;
     align-items: center;
-    padding-top: 25px;
+    padding-top: 18px;
     height: 100vh;
     background-color: #dcdcdc;
     margin: 0;
 }
+
 
 .container {
     text-align: left;
@@ -22,14 +23,15 @@ body {
     height: 300px;
     overflow-x: scroll;
     overflow-wrap: normal;
-   
+
     /* overscroll-behavior-block: unset; */
     margin-bottom: 20px;
 }
+
 #array-container::-webkit-scrollbar {
     display: none;
-  }
-  
+}
+
 
 .bar {
     width: 30px;
@@ -51,6 +53,7 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
 .legend-box {
     width: 20px;
     height: 20px;
@@ -60,4 +63,22 @@ input::-webkit-inner-spin-button {
 
 .legend-text {
     font-size: 14px;
+}
+
+@media (max-width:780px) {
+
+    body {
+        font-family: 'poppins';
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+        padding-top: 0px;
+        height: 100vh;
+        background-color: #dcdcdc;
+        margin: 0;
+    }
+
+    .legend-box {
+        margin-top: 30px;
+    }
 }
